--- a/foodTracker.css
+++ b/foodTracker.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(./images/foodie.jpg);
+    background-image: url(./images/foodbg.webp);
     background-repeat: no-repeat;
     background-position: center 1px;
     background-size: 550px;
