--- a/foodTracker.css
+++ b/foodTracker.css
@@ -26,6 +26,19 @@ input[type="submit"],button{
     border-radius: 8px;
 }
 
+.table-wrapper{
+    width: 100%;
+    max-height: 300px;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+
+th{
+    position: sticky;
+    top: 0px;
+    z-index: 2;
+}
+
 table{
     border: 1px solid;
     border-color: #f80178;
@@ -68,4 +81,15 @@ input,select{
     border: 2px solid #de1e1e;
     width: 300px;
 
+}
+
+@media (max-width: 600px) {
+  body {
+    background: url('images/foodbg.webp') no-repeat center center fixed;
+    background-size:100% 99.5%;
+  }
+  .container{
+    top: 35px;
+    height: 550px;
+  }
 }
